# robot

./: .gitignore  RAPPORT_INTEGRATION_CAMERA_SPARKI.md  blockly_setup.js  camera-server.js  camera_bridge.py  camera_control.py  carScene.js  environments.js  index.html  index.js  main.js  package-lock.json  package.json  vite.config.js
.github/workflows/: build.yml  tauri-build.yml
core/: camera_control.js  car.js  context.js  controls.js  environment.js  globals.js  index.js  materials.js  physics.js  rover.js  scene.js
public/models/street/: Street environment_V01.mtl
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
